Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/generics/typeargs/Newarg1.out
Newarg1.java:18:9: compiler.err.cant.apply.symbol: kindname.constructor, T, K, java.lang.String, kindname.class, T<X>, (compiler.misc.no.conforming.assignment.exists: (compiler.misc.inconvertible.types: java.lang.String, java.lang.Integer))
1 error
